--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "/bin/python3",
+    "python.pythonPath": "C:\\Users\\matti\\AppData\\Local\\Programs\\Python\\Python39\\python.exe",
     "jupyter.jupyterServerType": "local"
 }
